--- a/src/components/newsCard/NewsCard.css
+++ b/src/components/newsCard/NewsCard.css
@@ -1,6 +1,6 @@
-.NewsCard {
-  height: 100%;
-  margin-left: 10rem;
-  padding: 10rem;
-  height: calc(2rem - 2rem);
+.image {
+  width: 100%;
+  height: 30rem;
+  object-fit: cover;
+  object-position: center;
 }
