--- a/src/components/newsItem/NewsItem.css
+++ b/src/components/newsItem/NewsItem.css
@@ -1,6 +1,33 @@
-.NewsItem {
-  height: 100%;
-  margin-left: 10rem;
-  padding: 10rem;
-  height: calc(2rem - 2rem);
+.item {
+  position: relative;
+  height: 20rem;
+  width: 20rem;
+  justify-content: flex-start;
+  flex: 0 0 calc(33.333% - 2rem);
+  margin: 0 1rem 2rem 1rem;
+  outline: solid 0.1 gray;
+  background-color: lightgray;
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+.item:hover {
+  transform: scale(1.1);
+  text-decoration: underline;
+}
+
+.image {
+  width: 100%;
+  height: 15rem;
+  object-fit: cover;
+  object-position: top;
+}
+
+.image {
+  background-color: grey;
+}
+
+.title {
+  padding: 0 2rem;
+  text-align: center;
 }
